# luau-format

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.MD  build.sh  compile_flags.txt  main.cpp
dependencies/Luau/Analysis/src/: TypedAllocator.cpp
dependencies/Luau/Ast/include/Luau/: Ast.h
include/: cli.hpp  formatter.hpp  simplifier.hpp
src/: cli.cpp  formatter.cpp  simplifier.cpp
tests/: test.cpp  test.hpp  test_simplifier.cpp
